--- a/config.toml
+++ b/config.toml
@@ -45,5 +45,6 @@ header_nav = [
   { url = "/", name_en = "/home/", name_fr = "/accueil/" },
   { url = "/projects", name_en = "/projects/", name_fr = "/projets/" },
   { url = "/blog", name_en = "/blog/", name_fr = "/blog/" },
-  { url = "https://github.com/paulcomte", name_en = "/github/", name_fr = "/github" }
+  { url = "https://github.com/paulcomte", name_en = "/github/", name_fr = "/github/" },
+  { url = "https://www.linkedin.com/in/im-paul-comte", name_en = "/linkedin/", name_fr = "/linkedin/" }
 ]
